<resources>
    <string name="app_name">TMDB MVVM</string>
    <string name="connection_problem">Connection Problem!</string>
    <string name="movie_info">Movie Info</string>
    <string name="release_date">Release Date:</string>
    <string name="rating">Rating:</string>
    <string name="runtime">Runtime:</string>
    <string name="budget">Budget:</string>
    <string name="revenue">Revenue:</string>
    <string name="overview">Overview:</string>
    <string name="single_movie_poster">Single Movie Poster</string>
    <string name="error_message">Error Message</string>
</resources>